Fix slideshow modal header close
It was way too big. The color: white does nothing.  The inner span is not necessary

--- a/app/assets/stylesheets/blacklight_gallery/slideshow.css
+++ b/app/assets/stylesheets/blacklight_gallery/slideshow.css
@@ -10,11 +10,6 @@
     .modal-header {
       border-bottom: none;
       padding: 0.5rem 1rem;
-
-      .close {
-        font-size: 2.5rem;
-        color: white;
-      }
     }
 
     .modal-body {
@@ -79,7 +74,6 @@
   .carousel-control.right {
     right: 0px;
   }
-
   .caption {
     font-size: 1rem;
     margin: 10px auto;
